# CCA

./: CHANGELOG.md  README.md  pyproject.toml
docs/: CNAME  index.html
src/cca/: __init__.py  __main__.py  _version.py  cli.py
src/cca/apps/: __init__.py  base.py  ghost.py  gnome.py  miab.py  wordops.py
tests/apps/: test_gnome_imports.py
