[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xed-cca"
dynamic = ["version"]
description = "cBOX@ /Container App-Installation — App-Stack-Manager für LXC-Boxen (Pendant zu xed-ccc Container-Lifecycle). cBOX.at/YOU by XED.dev Tools via Collective Context (CC)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Collective Context", email = "code@collective-context.org" },
]
keywords = [
    "lxc",
    "proxmox",
    "container",
    "app-installer",
    "cli",
    "tui",
    "cca",
    "cbox",
    "ghost",
    "wordops",
    "miab",
    "gnome",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "xed-ccc>=0.1.0",
]

[project.optional-dependencies]
tui = [
    "textual>=0.80",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
cca = "cca.cli:main"

[project.urls]
Homepage       = "https://cca.xed.dev"
Repository     = "https://github.com/XED-dev/CCA"
"XED /Suite"   = "https://xed.dev"
"XED /CCC"     = "https://ccc.xed.dev"
Issues         = "https://github.com/XED-dev/CCA/issues"
Changelog      = "https://github.com/XED-dev/CCA/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/cca/_version.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/cca"]

[tool.hatch.build.targets.sdist]
include = [
    "src/cca",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
